docs:template_with_footer

--- a/src/index.html
+++ b/src/index.html
@@ -171,6 +171,12 @@
      <!--**********************************
             Footer start
         ***********************************-->
+      <div class="footer" style="position: fixed;bottom:0;left:0;width:100%;">
+          <div class="copyright" style="color: rgb(97, 97, 97)">
+              <p>Andriamisedra Notianiavo Filamatriniaina</p>
+              <p>Rakotomavo Arisoa Anjamalala</p>
+          </div>
+      </div>
       <!--**********************************
           Footer end
       ***********************************-->
